// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser List Block should render Article 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 24px;
}

.emotion-2 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width:600px) {
  .emotion-2 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width:900px) {
  .emotion-2 {
    grid-template-columns: repeat(12, 1fr);
  }
}

.emotion-4 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-4 {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-6 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  display: grid;
  grid-auto-rows: max-content;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-areas: 'image' 'pretitle' 'title' 'lead' 'authors';
}

.emotion-9 {
  grid-column: 1/13;
  width: 100%;
  height: 100%;
  overflow: hidden;
  grid-area: image;
}

.emotion-9:empty {
  min-height: 32px;
}

.emotion-11 {
  max-width: 100%;
  height: auto;
  aspect-ratio: 1.8;
  max-height: 400px;
  object-fit: cover;
  width: 100%;
  grid-column: 1/13;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.emotion-11:where(.emotion-5:hover .emotion-11) {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

@media (min-width:900px) {
  .emotion-11 {
    aspect-ratio: 1;
  }
}

.emotion-13 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #F5FF64;
  height: 3px;
  width: 100%;
  margin-bottom: 12px;
  grid-area: pretitle;
}

.emotion-13:where(.emotion-5:hover .emotion-13) {
  background-color: #e91e63;
}

.emotion-15 {
  transition-property: color,background-color;
  transition-duration: 0.3s;
  transition-timing-function: ease-in-out;
  padding: 4px 16px;
  background-color: #F5FF64;
  color: rgba(0, 0, 0, 0.87);
  width: fit-content;
  font-size: 14px;
  font-weight: 300;
  -webkit-transform: translateY(-100%);
  -moz-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
}

.emotion-15:where(.emotion-5:hover .emotion-15) {
  background-color: #e91e63;
  color: #fff;
}

@media (min-width:900px) {
  .emotion-15 {
    font-size: 18px;
  }
}

.emotion-17 {
  grid-area: title;
  margin-bottom: 8px;
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-17 {
    font-size: 32px;
  }
}

.emotion-19 {
  font-weight: 400;
  grid-area: lead;
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-19.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-21 {
  margin: 0;
  font-size: 12px;
  grid-area: authors;
}

.emotion-23 {
  font-weight: 400;
}

.emotion-25 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-25 {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-46 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-46 {
    grid-column-start: 9;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

<section
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-25 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-46 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Teaser List Block should render Event 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 24px;
}

.emotion-2 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width:600px) {
  .emotion-2 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width:900px) {
  .emotion-2 {
    grid-template-columns: repeat(12, 1fr);
  }
}

.emotion-4 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-4 {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-6 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  display: grid;
  grid-auto-rows: max-content;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-areas: 'image' 'pretitle' 'title' 'lead' 'authors';
}

.emotion-9 {
  grid-column: 1/13;
  width: 100%;
  height: 100%;
  overflow: hidden;
  grid-area: image;
}

.emotion-9:empty {
  min-height: 32px;
}

.emotion-11 {
  max-width: 100%;
  height: auto;
  aspect-ratio: 1.8;
  max-height: 400px;
  object-fit: cover;
  width: 100%;
  grid-column: 1/13;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.emotion-11:where(.emotion-5:hover .emotion-11) {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

@media (min-width:900px) {
  .emotion-11 {
    aspect-ratio: 1;
  }
}

.emotion-13 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #F5FF64;
  height: 3px;
  width: 100%;
  margin-bottom: 12px;
  grid-area: pretitle;
}

.emotion-13:where(.emotion-5:hover .emotion-13) {
  background-color: #e91e63;
}

.emotion-15 {
  transition-property: color,background-color;
  transition-duration: 0.3s;
  transition-timing-function: ease-in-out;
  padding: 4px 16px;
  background-color: #F5FF64;
  color: rgba(0, 0, 0, 0.87);
  width: fit-content;
  font-size: 14px;
  font-weight: 300;
  -webkit-transform: translateY(-100%);
  -moz-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
}

.emotion-15:where(.emotion-5:hover .emotion-15) {
  background-color: #e91e63;
  color: #fff;
}

@media (min-width:900px) {
  .emotion-15 {
    font-size: 18px;
  }
}

.emotion-17 {
  grid-area: title;
  margin-bottom: 8px;
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-17 {
    font-size: 32px;
  }
}

.emotion-19 {
  font-weight: 400;
  grid-area: lead;
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-19.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-21 {
  margin: 0;
  font-size: 12px;
  grid-area: authors;
}

.emotion-23 {
  font-weight: 400;
}

.emotion-25 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-25 {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-46 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-46 {
    grid-column-start: 9;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

<section
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-25 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-46 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Teaser List Block should render Page 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 24px;
}

.emotion-2 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width:600px) {
  .emotion-2 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width:900px) {
  .emotion-2 {
    grid-template-columns: repeat(12, 1fr);
  }
}

.emotion-4 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-4 {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-6 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  display: grid;
  grid-auto-rows: max-content;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-areas: 'image' 'pretitle' 'title' 'lead' 'authors';
}

.emotion-9 {
  grid-column: 1/13;
  width: 100%;
  height: 100%;
  overflow: hidden;
  grid-area: image;
}

.emotion-9:empty {
  min-height: 32px;
}

.emotion-11 {
  max-width: 100%;
  height: auto;
  aspect-ratio: 1.8;
  max-height: 400px;
  object-fit: cover;
  width: 100%;
  grid-column: 1/13;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.emotion-11:where(.emotion-5:hover .emotion-11) {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

@media (min-width:900px) {
  .emotion-11 {
    aspect-ratio: 1;
  }
}

.emotion-13 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #F5FF64;
  height: 3px;
  width: 100%;
  margin-bottom: 12px;
  grid-area: pretitle;
}

.emotion-13:where(.emotion-5:hover .emotion-13) {
  background-color: #e91e63;
}

.emotion-15 {
  transition-property: color,background-color;
  transition-duration: 0.3s;
  transition-timing-function: ease-in-out;
  padding: 4px 16px;
  background-color: #F5FF64;
  color: rgba(0, 0, 0, 0.87);
  width: fit-content;
  font-size: 14px;
  font-weight: 300;
  -webkit-transform: translateY(-100%);
  -moz-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
}

.emotion-15:where(.emotion-5:hover .emotion-15) {
  background-color: #e91e63;
  color: #fff;
}

@media (min-width:900px) {
  .emotion-15 {
    font-size: 18px;
  }
}

.emotion-17 {
  grid-area: title;
  margin-bottom: 8px;
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-17 {
    font-size: 32px;
  }
}

.emotion-19 {
  font-weight: 400;
  grid-area: lead;
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-19.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-21 {
  margin: 0;
  font-size: 12px;
  grid-area: authors;
}

.emotion-23 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-23 {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-42 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-42 {
    grid-column-start: 9;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

<section
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            />
          </div>
        </a>
      </article>
      <article
        class="emotion-23 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            />
          </div>
        </a>
      </article>
      <article
        class="emotion-42 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            />
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Teaser List Block should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 24px;
}

.emotion-2 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width:600px) {
  .emotion-2 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width:900px) {
  .emotion-2 {
    grid-template-columns: repeat(12, 1fr);
  }
}

.emotion-4 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-4 {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-6 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  display: grid;
  grid-auto-rows: max-content;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-areas: 'image' 'pretitle' 'title' 'lead' 'authors';
}

.emotion-9 {
  grid-column: 1/13;
  width: 100%;
  height: 100%;
  overflow: hidden;
  grid-area: image;
}

.emotion-9:empty {
  min-height: 32px;
}

.emotion-11 {
  max-width: 100%;
  height: auto;
  aspect-ratio: 1.8;
  max-height: 400px;
  object-fit: cover;
  width: 100%;
  grid-column: 1/13;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.emotion-11:where(.emotion-5:hover .emotion-11) {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

@media (min-width:900px) {
  .emotion-11 {
    aspect-ratio: 1;
  }
}

.emotion-13 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #F5FF64;
  height: 3px;
  width: 100%;
  margin-bottom: 12px;
  grid-area: pretitle;
}

.emotion-13:where(.emotion-5:hover .emotion-13) {
  background-color: #e91e63;
}

.emotion-15 {
  transition-property: color,background-color;
  transition-duration: 0.3s;
  transition-timing-function: ease-in-out;
  padding: 4px 16px;
  background-color: #F5FF64;
  color: rgba(0, 0, 0, 0.87);
  width: fit-content;
  font-size: 14px;
  font-weight: 300;
  -webkit-transform: translateY(-100%);
  -moz-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
}

.emotion-15:where(.emotion-5:hover .emotion-15) {
  background-color: #e91e63;
  color: #fff;
}

@media (min-width:900px) {
  .emotion-15 {
    font-size: 18px;
  }
}

.emotion-17 {
  grid-area: title;
  margin-bottom: 8px;
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-17 {
    font-size: 32px;
  }
}

.emotion-19 {
  font-weight: 400;
  grid-area: lead;
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-19.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-21 {
  margin: 0;
  font-size: 12px;
  grid-area: authors;
}

.emotion-23 {
  font-weight: 400;
}

.emotion-25 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-25 {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-46 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-46 {
    grid-column-start: 9;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

<section
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-25 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-46 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Teaser List Block should render WithEmotion 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 24px;
}

.emotion-2 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width:600px) {
  .emotion-2 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width:900px) {
  .emotion-2 {
    grid-template-columns: repeat(12, 1fr);
  }
}

.emotion-4 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-4 {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-6 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  display: grid;
  grid-auto-rows: max-content;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-areas: 'image' 'pretitle' 'title' 'lead' 'authors';
}

.emotion-9 {
  grid-column: 1/13;
  width: 100%;
  height: 100%;
  overflow: hidden;
  grid-area: image;
}

.emotion-9:empty {
  min-height: 32px;
}

.emotion-11 {
  max-width: 100%;
  height: auto;
  aspect-ratio: 1.8;
  max-height: 400px;
  object-fit: cover;
  width: 100%;
  grid-column: 1/13;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.emotion-11:where(.emotion-5:hover .emotion-11) {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

@media (min-width:900px) {
  .emotion-11 {
    aspect-ratio: 1;
  }
}

.emotion-13 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #F5FF64;
  height: 3px;
  width: 100%;
  margin-bottom: 12px;
  grid-area: pretitle;
}

.emotion-13:where(.emotion-5:hover .emotion-13) {
  background-color: #e91e63;
}

.emotion-15 {
  transition-property: color,background-color;
  transition-duration: 0.3s;
  transition-timing-function: ease-in-out;
  padding: 4px 16px;
  background-color: #F5FF64;
  color: rgba(0, 0, 0, 0.87);
  width: fit-content;
  font-size: 14px;
  font-weight: 300;
  -webkit-transform: translateY(-100%);
  -moz-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
}

.emotion-15:where(.emotion-5:hover .emotion-15) {
  background-color: #e91e63;
  color: #fff;
}

@media (min-width:900px) {
  .emotion-15 {
    font-size: 18px;
  }
}

.emotion-17 {
  grid-area: title;
  margin-bottom: 8px;
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-17 {
    font-size: 32px;
  }
}

.emotion-19 {
  font-weight: 400;
  grid-area: lead;
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-19.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-21 {
  margin: 0;
  font-size: 12px;
  grid-area: authors;
}

.emotion-23 {
  font-weight: 400;
}

.emotion-25 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-25 {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-46 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-46 {
    grid-column-start: 9;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

<section
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-25 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-46 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="An image description"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            >
              <div
                class="emotion-15 emotion-16"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-17 emotion-18"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-19 emotion-20"
            >
              Lead
            </p>
            <div
              class="emotion-21 emotion-22"
            >
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`Teaser List Block should render WithTitle 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 24px;
}

.emotion-2 {
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  font-size: 1.5rem;
  line-height: 1.4;
}

.emotion-3 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

@media (min-width:600px) {
  .emotion-3 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width:900px) {
  .emotion-3 {
    grid-template-columns: repeat(12, 1fr);
  }
}

.emotion-5 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-5 {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-7 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8 {
  display: grid;
  grid-auto-rows: max-content;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-areas: 'image' 'pretitle' 'title' 'lead' 'authors';
}

.emotion-10 {
  grid-column: 1/13;
  width: 100%;
  height: 100%;
  overflow: hidden;
  grid-area: image;
}

.emotion-10:empty {
  min-height: 32px;
}

.emotion-12 {
  max-width: 100%;
  height: auto;
  aspect-ratio: 1.8;
  max-height: 400px;
  object-fit: cover;
  width: 100%;
  grid-column: 1/13;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.emotion-12:where(.emotion-6:hover .emotion-12) {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

@media (min-width:900px) {
  .emotion-12 {
    aspect-ratio: 1;
  }
}

.emotion-14 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #F5FF64;
  height: 3px;
  width: 100%;
  margin-bottom: 12px;
  grid-area: pretitle;
}

.emotion-14:where(.emotion-6:hover .emotion-14) {
  background-color: #e91e63;
}

.emotion-16 {
  transition-property: color,background-color;
  transition-duration: 0.3s;
  transition-timing-function: ease-in-out;
  padding: 4px 16px;
  background-color: #F5FF64;
  color: rgba(0, 0, 0, 0.87);
  width: fit-content;
  font-size: 14px;
  font-weight: 300;
  -webkit-transform: translateY(-100%);
  -moz-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  transform: translateY(-100%);
}

.emotion-16:where(.emotion-6:hover .emotion-16) {
  background-color: #e91e63;
  color: #fff;
}

@media (min-width:900px) {
  .emotion-16 {
    font-size: 18px;
  }
}

.emotion-18 {
  grid-area: title;
  margin-bottom: 8px;
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-18 {
    font-size: 32px;
  }
}

.emotion-20 {
  font-weight: 400;
  grid-area: lead;
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-20.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-22 {
  margin: 0;
  font-size: 12px;
  grid-area: authors;
}

.emotion-24 {
  font-weight: 400;
}

.emotion-26 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-26 {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-47 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-47 {
    grid-column-start: 9;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

<section
    class="emotion-0 emotion-1"
  >
    <h1
      class="MuiTypography-root MuiTypography-h5 emotion-2"
    >
      Foobar Title
    </h1>
    <div
      class="emotion-3 emotion-4"
    >
      <article
        class="emotion-5 emotion-6"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-7"
          href="https://example.com"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <img
                alt="An image description"
                class="emotion-12 emotion-13"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-14 emotion-15"
            >
              <div
                class="emotion-16 emotion-17"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-18 emotion-19"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-20 emotion-21"
            >
              Lead
            </p>
            <div
              class="emotion-22 emotion-23"
            >
              <time
                class="emotion-24 emotion-25"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-26 emotion-6"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-7"
          href="https://example.com"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <img
                alt="An image description"
                class="emotion-12 emotion-13"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-14 emotion-15"
            >
              <div
                class="emotion-16 emotion-17"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-18 emotion-19"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-20 emotion-21"
            >
              Lead
            </p>
            <div
              class="emotion-22 emotion-23"
            >
              <time
                class="emotion-24 emotion-25"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-47 emotion-6"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-7"
          href="https://example.com"
        >
          <div
            class="emotion-8 emotion-9"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <img
                alt="An image description"
                class="emotion-12 emotion-13"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title="An image title"
              />
            </div>
            <div
              class="emotion-14 emotion-15"
            >
              <div
                class="emotion-16 emotion-17"
              >
                Pre Title
              </div>
            </div>
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-18 emotion-19"
            >
              Title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-20 emotion-21"
            >
              Lead
            </p>
            <div
              class="emotion-22 emotion-23"
            >
              <time
                class="emotion-24 emotion-25"
                datetime="2023-01-01T00:00:00.000Z"
              >
                01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </section>
</DocumentFragment>
`;
